[gd_scene load_steps=15 format=3 uid="uid://d1agbj6p4vjf4"]

[ext_resource type="Texture2D" uid="uid://cxy2nh7bqx7pd" path="res://Art/Enchanted Forest Characters with animations.png" id="1_tltqs"]
[ext_resource type="Script" path="res://actors/entities/Player.gd" id="1_vyw4a"]
[ext_resource type="PackedScene" uid="uid://b2qdw8yanxnog" path="res://actors/ui/PlayerUI.tscn" id="2_cng1a"]
[ext_resource type="PackedScene" uid="uid://cyy2hdi8qw63f" path="res://actors/weapons/Sword.tscn" id="3_16ft7"]
[ext_resource type="PackedScene" uid="uid://ccjdsi0f8hieo" path="res://actors/components/Hurtbox.tscn" id="4_dpdll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_13l8l"]
radius = 6.0

[sub_resource type="Animation" id="Animation_ujhh0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wn2hu"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_nwd6d"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_atwg0"]
_data = {
"RESET": SubResource("Animation_ujhh0"),
"idle": SubResource("Animation_wn2hu"),
"walk": SubResource("Animation_nwd6d")
}

[sub_resource type="Animation" id="Animation_0vl74"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_x5h8t"]
resource_name = "hit"
length = 0.1
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333, 0.0666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(10, 10, 10, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_63l5g"]
_data = {
"RESET": SubResource("Animation_0vl74"),
"hit": SubResource("Animation_x5h8t")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_f01j0"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_vyw4a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource("2_cng1a")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)
position_smoothing_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = ExtResource("1_tltqs")
hframes = 8
region_enabled = true
region_rect = Rect2(256, 288, 256, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_13l8l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_atwg0")
}

[node name="HitAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_63l5g")
}

[node name="Sword" parent="." instance=ExtResource("3_16ft7")]

[node name="Hurtbox" parent="." instance=ExtResource("4_dpdll")]
collision_mask = 4
hp = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_f01j0")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="hit" from="Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="zero" from="Hurtbox" to="." method="_on_hurtbox_zero"]
